--- a/style.css
+++ b/style.css
@@ -46,3 +46,54 @@ footer {
     color: #888;
 }
 
+.page {
+    display: flex;
+    max-width: 1200px;
+    margin: 60px auto;
+    padding: 0 20px;
+}
+
+.sidebar {
+    flex: 0 0 250px;
+    padding-right: 30px;
+    border-right: 1px solid #ddd;
+}
+
+.sidebar h2 {
+    margin-top: 0;
+    font-size: 24px;
+}
+
+.sidebar .links a {
+    display: block;
+    margin: 8px 0;
+    text-decoration: none;
+    color: #0066cc;
+    font-weight: bold;
+}
+
+.profile-pic {
+    width: 150px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.main {
+    flex: 1;
+    padding-left: 40px;
+}
+.icon-link {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+    text-decoration: none;
+    color: #0066cc;
+    font-weight: bold;
+}
+
+.icon-link img {
+    width: 20px;
+    height: 20px;
+    margin-right: 8px;
+    vertical-align: middle;
+}
